--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,6 +2,7 @@
   "CONTINUOUS": "Kontinuierlich",
   "DISCRETE": "Diskret",
   "PASSTHROUGH": "Durchreichend",
+  "DEFAULT": "Eigenschaften",
   "NODES": "Knoten",
   "EDGES": "Kanten",
   "LOST": "Hast du dich verirrt? Hier geht's zur Startseite!",
@@ -37,6 +38,7 @@
   "MAIN_STATS_GRAPH_INFO_NODES": "(#) Knoten",
   "MAIN_STATS_GRAPH_INFO_EDGES": "(#) Kanten",
   "MAIN_STATS_GRAPH_INFO_CLASSES": "(#) Graph-Gestaltung",
+  "MAIN_STATS_GRAPH_INFO_NW_TITLE": "Netzwerk-Name",
   "MAIN_STATS_GRAPH_INFO_NW_RIGHTSHOLDER": "Rechtsinhaber",
   "MAIN_STATS_GRAPH_INFO_NW_TYPE": "Netzwerktyp",
   "MAIN_STATS_GRAPH_INFO_NW_ORGANISM": "Organismus",
@@ -82,11 +84,14 @@
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT": "Ein Netzwerk mit so vielen Elementen kann nicht verarbeitet werden",
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_NODES": "#Knoten",
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_EDGES": "#Kanten",
+  "SIDEBAR_MANAGE_FILE_INVALID": "Datei ungültig!",
+  "SIDEBAR_MANAGE_FILE_INVALID_TEXT": "Du hast versucht eine Datei von NDEx zu importieren, die nicht existiert, oder die NDEx Server sind derzeit nicht erreichbar. Prüfe, ob du NDEx im Browser erreichst und kontrolliere deine Eingabe.",
   "SIDEBAR_COLLAPSE": "Aus- / einblenden",
-  "SIDEBAR_EDIT_DESCRIPTION_TITLE": "Beschreibung",
-  "SIDEBAR_EDIT_DEFAULT_TITLE": "Bearbeiten",
-  "SIDEBAR_EDIT_INSPECT_TITLE": "Netzwerk untersuchen",
+  "SIDEBAR_EDIT_DESCRIPTION": "Netzwerk-Informationen",
+  "SIDEBAR_EDIT_ATTRIBUTES": "Knoten- und Kanten-Attribute",
+  "SIDEBAR_EDIT_INSPECT": "Netzwerk untersuchen",
   "SIDEBAR_EDIT_ATTRIBUTES_TITLE": "Mappings",
+  "SIDEBAR_EDIT_HEADLINE_SETTINGS": "Markierungsfarben und -dauer festlegen",
   "SIDEBAR_EDIT_TH_CLASSNAME": "Klassenname",
   "SIDEBAR_EDIT_TH_CSS_KEY": "Style-Name",
   "SIDEBAR_EDIT_TH_CSS_VALUE": "Style-Wert",
@@ -98,38 +103,52 @@
   "SIDEBAR_EDIT_LABEL_HEX_EDGE": "Kanten hervorheben (Farbcodes im Format #FF00FF)",
   "SIDEBAR_EDIT_LABEL_DURATION": "Dauer (in ms)",
   "SIDEBAR_EDIT_BTN_SUBMIT": "Anwenden",
-  "SIDEBAR_EDIT_TOAST_UPDATE": "Highlight-Farbe & -Dauer",
-  "SIDEBAR_EDIT_TOAST_NODES": "Knoten",
-  "SIDEBAR_EDIT_TOAST_EDGES": "Kanten",
-  "SIDEBAR_EDIT_TOAST_DURATION": "Dauer",
   "SIDEBAR_EDIT_CB_LABELS": "Beschriftungen anzeigen",
+  "SIDEBAR_EDIT_CB_LABELS_FALSE": "Beschriftungen ausblenden",
   "SIDEBAR_EDIT_CB_NODES_ATTRIBUTES": "Alle Knotenattribute anzeigen",
   "SIDEBAR_EDIT_CB_EDGES_ATTRIBUTES": "Alle Kantenattribute anzeigen",
   "SIDEBAR_EDIT_ASPECTS_NODES": "Knoten",
   "SIDEBAR_EDIT_ASPECTS_EDGES": "Kanten",
   "SIDEBAR_EDIT_MAPPED_BY": "verändert in Abhängigkeit von",
-  "SIDEBAR_EDIT_COMPARISON_NODES": "Knoten",
+  "SIDEBAR_EDIT_COMPARISON_NODE": "Ausgewählte Knoten",
   "SIDEBAR_EDIT_COMPARISON_NODE_NAME": "Knotenname (ID)",
   "SIDEBAR_EDIT_COMPARISON_NODE_ATTRIBUTES": "Knotenattribute",
-  "SIDEBAR_EDIT_COMPARISON_EDGES": "Kanten",
+  "SIDEBAR_EDIT_COMPARISON_EDGE": "Ausgewählte Kanten",
   "SIDEBAR_EDIT_COMPARISON_EDGE_NAME": "Kantenname (ID)",
   "SIDEBAR_EDIT_COMPARISON_EDGE_ATTRIBUTES": "Kantenattribute",
   "SIDEBAR_EDIT_TT_HIGHLIGHT_NODE": "Knoten hervorheben | ID:",
   "SIDEBAR_EDIT_TT_HIGHLIGHT_EDGE": "Kante hervorheben | ID:",
   "SIDEBAR_EDIT_TT_MANAGE_MAPPINGS": "Neue Mappings anlegen und existierende Mappings verwalten",
   "SIDEBAR_EDIT_MANAGE_MAPPINGS": "Mappings anlegen und verwalten",
+  "SIDEBAR_EDIT_TT_CHART_PASSTHROUGH": "Graph zu diesem Attribut anzeigen",
+  "SIDEBAR_EDIT_TT_REMOVE_PASSTHROUGH": "Dieses Mapping zum Löschen markieren",
   "SIDEBAR_EDIT_TT_PASSTHROUGH": "Ein Passthrough-Mapping schleust die Werte der Spalte (links) einfach durch bis zum spezifizierten Style-Attribut (rechts)",
   "SIDEBAR_EDIT_INSPECT_TITLE_HINT": "Erstelle eigene Regeln, um das Netzwerk zu untersuchen. Definiere dazu Typ, Attribut und dessen Ausprägungen im Formular unten. Dann kannst du Elemente im Netzwerk entsprechend hervorheben. Farben und Dauer der Markierung kannst du mit Klick auf das Zahnrad anpassen.",
-  "SIDEBAR_EDIT_INSPECT_TYPE_NODE": "Knoten",
-  "SIDEBAR_EDIT_INSPECT_TYPE_EDGE": "Kante",
+  "SIDEBAR_EDIT_INSPECT_TH_TYPE": "Typ",
+  "SIDEBAR_EDIT_INSPECT_TH_PROPERTY": "Attribute",
+  "SIDEBAR_EDIT_INSPECT_TH_VALUES": "Werte",
+  "SIDEBAR_EDIT_INSPECT_TH_FLASH": "Markieren",
+  "SIDEBAR_EDIT_INSPECT_TH_REMOVE": "Löschen",
+  "SIDEBAR_EDIT_INSPECT_WITH_PROPERTY": "mit Eigenschaft",
   "SIDEBAR_EDIT_INSPECT_SAME": "hat den Wert",
+  "SIDEBAR_EDIT_INSPECT_RANGE_RESET": "Werte auf Minimum und Maximum zurücksetzen",
   "SIDEBAR_EDIT_INSPECT_RANGE_LOWER": "von",
   "SIDEBAR_EDIT_INSPECT_RANGE_UPPER": "bis",
   "SIDEBAR_EDIT_INSPECT_SAME_LABEL": "mit Wert",
   "SIDEBAR_EDIT_INSPECT_SAME_PLACEHOLDER": "Wert",
+  "SIDEBAR_EDIT_INSPECT_ERROR_TYPE": "Typ definieren: Möchtest du Knoten oder Kanten finden?",
+  "SIDEBAR_EDIT_INSPECT_ERROR_PROPERTY": "Attribut definieren: Die Verteilung welcher Eigenschaft interessiert dich?",
+  "SIDEBAR_EDIT_INSPECT_ERROR_VALUE_BOOL": "Mögliche Werte für dieses Attribut sind <code>true</code> und <code>false</code>",
+  "SIDEBAR_EDIT_INSPECT_ERROR_VALUE_NUMERIC": "Werte dieses Attributs müssen numerisch sein. Grenze die Ergebnisse ein, indem du ein Intervall definierst.",
+  "SIDEBAR_EDIT_INSPECT_ERROR_VALUE_TEXT": "Gib Text ein, nach dem du im gesetzten Attribut suchst.",
+  "SIDEBAR_EDIT_INSPECT_PROPERTY_NODE": "Knoten-Eigenschaften",
+  "SIDEBAR_EDIT_INSPECT_PROPERTY_EDGE": "Kanten-Eigenschaften",
   "SIDEBAR_EDIT_INSPECT_REMOVE_ITEM": "Element entfernen?",
-  "SIDEBAR_EDIT_NAV_TT_MAPPINGS": "Übersicht über Mappings",
-  "SIDEBAR_EDIT_NAV_TT_INSPECT": "Netzwerk untersuchen",
+  "SIDEBAR_EDIT_INSPECT_RULE_LIST": "Definierte Regeln",
+  "SIDEBAR_EDIT_INSPECT_NEW_RULE": "Neue Regel anlegen",
+  "SIDEBAR_EDIT_NAV_TT_INFO": "Informationen über das Netzwerk",
+  "SIDEBAR_EDIT_NAV_TT_MAPPINGS": "Visualisierung",
+  "SIDEBAR_EDIT_NAV_TT_EXPORT": "Export",
   "SIDEBAR_EDIT_NAV_TT_SETTINGS": "Markierungseinstellungen",
   "SIDEBAR_EDIT_BTN_LABEL_DISPLAY_CONTINUOUS_DETAILS": "Details zum Mapping",
   "SIDEBAR_EDIT_VISUAL_AID_ERROR_HEADER": "Keine Vorschau verfügbar",
@@ -150,6 +169,14 @@
   "SIDEBAR_EDIT_NEW_MAPPING_NODE_PLACEHOLDER": "Eigenschaft eines Knotens eingeben ...",
   "SIDEBAR_EDIT_NEW_MAPPING_PLACEHOLDER": "Visuelle Eigenschaft eingeben ...",
   "SIDEBAR_EDIT_LABEL_HISTOGRAM": "Histogramm zu ",
+  "SIDEBAR_EDIT_TT_EDIT_INFORMATION_TOGGLE": "Netzwerk-Attribute bearbeiten",
+  "SIDEBAR_EDIT_TT_EDIT_INFORMATION_DISCARD": "Änderungen an Netzwerk-Attributen verwerfen",
+  "SIDEBAR_EDIT_TT_EDIT_STATUS_TOGGLE": "NDEx-Status bearbeiten",
+  "SIDEBAR_EDIT_TT_EDIT_STATUS_DISCARD": "Änderungen am NDEx-Status verwerfen",
+  "SIDEBAR_EDIT_TT_EDIT_NODES_TOGGLE": "Knoten-Eigenschaften bearbeiten",
+  "SIDEBAR_EDIT_TT_EDIT_NODES_DISCARD": "Änderungen an Knoten-Eigenschaften verwerfen",
+  "SIDEBAR_EDIT_TT_EDIT_EDGES_TOGGLE": "Kanten-Eigenschaften bearbeiten",
+  "SIDEBAR_EDIT_TT_EDIT_EDGES_DISCARD": "Änderungen an Kanten-Eigenschaften verwerfen",
   "SIDEBAR_EDIT_TT_INSPECTION_MODE": "Mappings ansehen",
   "SIDEBAR_EDIT_TT_EDIT_MODE": "Mappings bearbeiten",
   "SIDEBAR_EDIT_TT_DELETE_ALL": "Mappings löschen",
@@ -162,13 +189,15 @@
   "SIDEBAR_EDIT_TT_DELETE_ROW": "Für alle Mappings diesen Schwellwert löschen",
   "SIDEBAR_EDIT_TT_DELETE_COL": "Dieses Mapping löschen und ungenutzte Schwellwerte entfernen",
   "SIDEBAR_EDIT_TT_DELETE_CELL": "Zelle löschen, aber Schwellwert erhalten",
-  "SIDEBAR_EDIT_TT_NEW": "New mapping collection",
+  "SIDEBAR_EDIT_TT_NEW": "Neue Mapping-Sammlung",
+  "SIDEBAR_EDIT_TT_EXISTING": "Bestehende Mappings",
   "SIDEBAR_EDIT_TT_ADD_CELL": "Zelle für diesen Schwellwert und dieses Mapping hinzufügen",
   "SIDEBAR_EDIT_TT_ADD_THRESHOLD": "Schwellwert hinzufügen",
   "SIDEBAR_EDIT_TT_ADD_MAPPING": "Mapping hinzufügen",
   "SIDEBAR_EDIT_TT_ADD_MAPPING_INPUT_SHOW": "Eingabefeld anzeigen",
   "SIDEBAR_EDIT_TT_ADD_MAPPING_INPUT_HIDE": "Eingabefeld verstecken",
   "SIDEBAR_EDIT_TT_BTN_ABORT": "Abbrechen und zurück zum Inspektionsmodus",
+  "SIDEBAR_EDIT_TT_BTN_ABORT_NEWLY_ADDED": "Anlegen dieser Mapping-Sammlung abbrechen",
   "SIDEBAR_EDIT_TT_BTN_MAGIC_ON": "Vorschau für diese Änderungen",
   "SIDEBAR_EDIT_TT_BTN_MAGIC_OFF": "Zurück zum Anpassen",
   "SIDEBAR_EDIT_TT_BTN_APPLY": "Änderungen aufs Netzwerk anwenden",
@@ -177,13 +206,34 @@
   "SIDEBAR_EDIT_TT_MOVE_CELL": "Diesen Wert einem anderen Schwellwert zuweisen",
   "SIDEBAR_EDIT_TT_MOVE_CELL_HERE": "Wert hier anwenden",
   "SIDEBAR_EDIT_TT_HAS_DUPLICATES": "Dieser Schwellwert hat doppelte Werte! Das kann zu Problemen führen und sollte ausgebessert werden.",
+  "SIDEBAR_EDIT_TT_NETWORK_ON_NDEX": "Netzwerk auf NDEx ansehen",
+  "SIDEBAR_EDIT_HEADLINE_ATTRIBUTES": "Attribute",
+  "SIDEBAR_EDIT_HEADLINE_STATUS": "NDEx Status",
+  "SIDEBAR_EDIT_NETWORK": "Netzwerk",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_DELETE_LINE": "Diesen Eintrag löschen",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_ADD_LINE": "Eintrag hinzufügen",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_SUBMIT": "Änderungen bestätigen",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_DISCARD": "Änderungen verwerfen",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_ERROR_REQUIRED": "Dieses Feld darf nicht leer sein",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_TYPE": "Datentyp",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_VALUE": "Wert",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_REMOVE_ALL": "Alle Einträge löschen",
   "SIDEBAR_EDIT_ALERT_REMOVE_EDGE_MAPPINGS_HEADLINE": "Kanten-Mappings zum Löschen markiert!",
   "SIDEBAR_EDIT_ALERT_REMOVE_NODE_MAPPINGS_HEADLINE": "Knote-Mappings zum Löschen markiert!",
   "SIDEBAR_EDIT_ALERT_REMOVE_EDGE_MAPPINGS": "Sei dir sicher, dass du alle Mappings zu den unten aufgelisteten Kantenattributen löschen möchtest. Das kann nur rückgängig gemacht werden, indem du das Mapping neu importierst. Schau dir die Mappings, die zur Sammlung gehören, nochmal genauer an, wenn du dir unsicher bist.",
   "SIDEBAR_EDIT_ALERT_REMOVE_NODE_MAPPINGS": "Sei dir sicher, dass du alle Mappings zu den unten aufgelisteten Knotenattributen löschen möchtest. Das kann nur rückgängig gemacht werden, indem du das Mapping neu importierst. Schau dir die Mappings, die zur Sammlung gehören, nochmal genauer an, wenn du dir unsicher bist.",
-  "SIDEBAR_EDIT_ALERT_REMOVE_EP": "Durchreichende:",
-  "SIDEBAR_EDIT_ALERT_REMOVE_ED": "Diskrete:",
-  "SIDEBAR_EDIT_ALERT_REMOVE_EC": "Kontinuierliche:",
+  "SIDEBAR_EDIT_ALERT_REMOVE_P": "Durchreichende:",
+  "SIDEBAR_EDIT_ALERT_REMOVE_D": "Diskrete:",
+  "SIDEBAR_EDIT_ALERT_REMOVE_C": "Kontinuierliche:",
+  "SIDEBAR_EDIT_MAPPING_HARD_RESET_NODE": "Visuelle Knoteneigenschaften auf Standardwerte zurücksetzen",
+  "SIDEBAR_EDIT_MAPPING_HARD_RESET_EDGE": "Visuelle Kanteneigenschaften auf Standardwerte zurücksetzen",
+  "SIDEBAR_EDIT_MAPPING_INIT_DEFAULT_NODE": "Visuelle Knoteneigenschaften initialisieren (mit Beschriftungen)",
+  "SIDEBAR_EDIT_MAPPING_INIT_DEFAULT_EDGE": "Visuelle Kanteneigenschaften initialisieren",
+  "SIDEBAR_EDIT_MAPPING_HARD_RESET_HEADLINE": "Auf Standardwerte zurücksetzen",
+  "SIDEBAR_EDIT_MAPPING_HARD_RESET_TEXT": "Die visuellen Eigenschaften zurückzusetzen bedeutet, dass alle bestehenden Mappings und visuelle Eigenschaften gelöscht werden. Bist du dir sicher, dass du fortfahren möchtest?",
+  "SIDEBAR_EDIT_MAPPING_HARD_RESET_TEXT_NODE": "Wir behalten das Mapping für Knoten-Beschriftungen (sofern es existiert). Wenn du auch das löschen möchtest, kannst du das manuell im Tab 'durchreichende Mappings' machen.",
+  "SIDEBAR_EDIT_TT_RESET_CONFIRM": "Ok, zurücksetzen!",
+  "SIDEBAR_EDIT_TT_RESET_ABORT": "Abbrechen",
   "MODAL_FONT_FACE_FORM": "Schriftart definieren",
   "MODAL_FONT_FACE_FORM_DESCRIPTION": "Schriftart und -größe, gegebenenfalls auch Schriftstil, können für das untenstehende Mapping über dieses Formular definiert werden. Zum Abbrechen das Fenster schließen.",
   "MAIN_MAPPINGS_TH_COL": "Spalte mit Daten",
@@ -263,7 +313,7 @@
   "SIDEBAR_COMPARE_ABOUT_3_1": "Verbesserungsvorschläge und Nachfragen sind bei",
   "SIDEBAR_COMPARE_ABOUT_3_2": "gut aufgehoben",
   "SIDEBAR_COMPARE_TEASER": "Vergleich zweier Netzwerke kommt demnächst!",
-  "SIDEBAR_IMAGE_TITLE": "Als Bild speichern",
+  "SIDEBAR_IMAGE_TITLE": "Export-Optionen",
   "SIDEBAR_IMAGE_FULL": "Gesamtes Netzwerk exportieren",
   "SIDEBAR_IMAGE_FULL_HINT": "Andernfalls ist lediglich der sichtbare Ausschnitt des Netzwerks im Bild",
   "SIDEBAR_IMAGE_BG": "Hintergrundfarbe ändern",
@@ -273,9 +323,9 @@
   "SIDEBAR_IMAGE_HEIGHT": "Bildhöhe",
   "SIDEBAR_IMAGE_SCALE": "Bild skalieren",
   "SIDEBAR_IMAGE_SCALE_HINT": "Das Bild kann bis zu verzehnfacht werden",
-  "SIDEBAR_IMAGE_SELECT_TYPE": "Dateityp wählen",
-  "SIDEBAR_IMAGE_BTN_DOWNLOAD": "Bild herunterladen",
-  "SIDEBAR_IMAGE_GENERAL": "Als Datentyp kannst du PNG oder JPEG wählen. Die weiteren Einstellungen sind optional.",
+  "SIDEBAR_IMAGE_SELECT_TYPE": "Herunterladen als",
+  "SIDEBAR_IMAGE_BTN_DOWNLOAD": "Herunterladen",
+  "SIDEBAR_IMAGE_GENERAL": "Als Datentyp kannst du PNG, JPEG oder CX wählen. Für die Bildformate kannst du weitere Einstellungen vornehmen. Möchtest du das Netzwerk anschließend auf NDEx laden, brauchst du das CX-Format.",
   "CHART_HISTO_INCREASE": "Bin hinzufügen",
   "CHART_HISTO_DECREASE": "Bin entfernen",
   "CHART_HISTO_RESET": "Bins zurücksetzen auf "
