--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,7 @@
   "CONTINUOUS": "Continuous",
   "DISCRETE": "Discrete",
   "PASSTHROUGH": "Passthrough",
+  "DEFAULT": "Properties",
   "NODES": "Nodes",
   "EDGES": "Edges",
   "LOST": "Are you lost? Return to main page!",
@@ -37,6 +38,7 @@
   "MAIN_STATS_GRAPH_INFO_NODES": "(#) Nodes",
   "MAIN_STATS_GRAPH_INFO_EDGES": "(#) Edges",
   "MAIN_STATS_GRAPH_INFO_CLASSES": "(#) Graph stylings",
+  "MAIN_STATS_GRAPH_INFO_NW_TITLE": "Network name",
   "MAIN_STATS_GRAPH_INFO_NW_RIGHTSHOLDER": "Rightsholder",
   "MAIN_STATS_GRAPH_INFO_NW_TYPE": "Network type",
   "MAIN_STATS_GRAPH_INFO_NW_ORGANISM": "Organism",
@@ -82,11 +84,14 @@
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT": "The network contains too many elements for this application",
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_NODES": "#Nodes",
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_EDGES": "#Edges",
+  "SIDEBAR_MANAGE_FILE_INVALID": "Invalid file!",
+  "SIDEBAR_MANAGE_FILE_INVALID_TEXT": "You either tried to load a file from NDEx that does not exist, or the NDEx servers are having issues. Check if you reach NDEx via Browser and check your input for typos.",
   "SIDEBAR_COLLAPSE": "Hide / show",
-  "SIDEBAR_EDIT_DESCRIPTION_TITLE": "Description",
-  "SIDEBAR_EDIT_DEFAULT_TITLE": "Edit",
-  "SIDEBAR_EDIT_INSPECT_TITLE": "Inspect network",
+  "SIDEBAR_EDIT_DESCRIPTION": "Network information",
+  "SIDEBAR_EDIT_ATTRIBUTES": "Node and edge attributes",
+  "SIDEBAR_EDIT_INSPECT": "Inspect network",
   "SIDEBAR_EDIT_ATTRIBUTES_TITLE": "Mappings",
+  "SIDEBAR_EDIT_HEADLINE_SETTINGS": "Set highlight colors and duration",
   "SIDEBAR_EDIT_TH_CLASSNAME": "Class name",
   "SIDEBAR_EDIT_TH_CSS_KEY": "Style key",
   "SIDEBAR_EDIT_TH_CSS_VALUE": "Style value",
@@ -98,38 +103,52 @@
   "SIDEBAR_EDIT_LABEL_HEX_EDGE": "Edges highlighting (hex color codes as such #FF00FF)",
   "SIDEBAR_EDIT_LABEL_DURATION": "Duration (in ms)",
   "SIDEBAR_EDIT_BTN_SUBMIT": "Apply",
-  "SIDEBAR_EDIT_TOAST_UPDATE": "Highlight color & duration",
-  "SIDEBAR_EDIT_TOAST_NODES": "Nodes",
-  "SIDEBAR_EDIT_TOAST_EDGES": "Edges",
-  "SIDEBAR_EDIT_TOAST_DURATION": "Duration",
   "SIDEBAR_EDIT_CB_LABELS": "Show labels",
+  "SIDEBAR_EDIT_CB_LABELS_FALSE": "Hide labels",
   "SIDEBAR_EDIT_CB_NODES_ATTRIBUTES": "Show all nodes attributes",
   "SIDEBAR_EDIT_CB_EDGES_ATTRIBUTES": "Show all edges attributes",
   "SIDEBAR_EDIT_ASPECTS_NODES": "Nodes",
   "SIDEBAR_EDIT_ASPECTS_EDGES": "Edges",
   "SIDEBAR_EDIT_MAPPED_BY": "mapped by",
-  "SIDEBAR_EDIT_COMPARISON_NODE": "Nodes",
+  "SIDEBAR_EDIT_COMPARISON_NODE": "Selected nodes",
   "SIDEBAR_EDIT_COMPARISON_NODE_NAME": "Node name (ID)",
   "SIDEBAR_EDIT_COMPARISON_NODE_ATTRIBUTES": "Node attributes",
-  "SIDEBAR_EDIT_COMPARISON_EDGE": "Edges",
+  "SIDEBAR_EDIT_COMPARISON_EDGE": "Selected edges",
   "SIDEBAR_EDIT_COMPARISON_EDGE_NAME": "Edge name (ID)",
   "SIDEBAR_EDIT_COMPARISON_EDGE_ATTRIBUTES": "Edge attributes",
   "SIDEBAR_EDIT_TT_HIGHLIGHT_NODE": "Highlight node",
   "SIDEBAR_EDIT_TT_HIGHLIGHT_EDGE": "Highlight edge",
   "SIDEBAR_EDIT_TT_MANAGE_MAPPINGS": "Manage existing mappings and create new ones",
   "SIDEBAR_EDIT_MANAGE_MAPPINGS": "Create and manage mappings",
+  "SIDEBAR_EDIT_TT_CHART_PASSTHROUGH": "Display chart for this property",
+  "SIDEBAR_EDIT_TT_REMOVE_PASSTHROUGH": "Mark this mapping for deletion",
   "SIDEBAR_EDIT_TT_PASSTHROUGH": "A passthrough mapping simply applies values from the data column (left) on the style property (right)",
   "SIDEBAR_EDIT_INSPECT_TITLE_HINT": "Build inspections using the form below. Submit them to flash the matching elements during your session. Click the cogs above to change highlight colors and duration.",
-  "SIDEBAR_EDIT_INSPECT_TYPE_NODE": "Node",
-  "SIDEBAR_EDIT_INSPECT_TYPE_EDGE": "Edge",
+  "SIDEBAR_EDIT_INSPECT_TH_TYPE": "Type",
+  "SIDEBAR_EDIT_INSPECT_TH_PROPERTY": "Property",
+  "SIDEBAR_EDIT_INSPECT_TH_VALUES": "Value",
+  "SIDEBAR_EDIT_INSPECT_TH_FLASH": "Mark",
+  "SIDEBAR_EDIT_INSPECT_TH_REMOVE": "Delete",
+  "SIDEBAR_EDIT_INSPECT_WITH_PROPERTY": "with property",
   "SIDEBAR_EDIT_INSPECT_SAME": "same as",
+  "SIDEBAR_EDIT_INSPECT_RANGE_RESET": "Reset thresholds to minimum and maximum",
   "SIDEBAR_EDIT_INSPECT_RANGE_LOWER": "from",
   "SIDEBAR_EDIT_INSPECT_RANGE_UPPER": "to",
   "SIDEBAR_EDIT_INSPECT_SAME_LABEL": "same as",
   "SIDEBAR_EDIT_INSPECT_SAME_PLACEHOLDER": "value",
+  "SIDEBAR_EDIT_INSPECT_ERROR_TYPE": "Define a type: Do you want to find nodes or edges?",
+  "SIDEBAR_EDIT_INSPECT_ERROR_PROPERTY": "Define a property: Which property's distribution do you want to inspect?",
+  "SIDEBAR_EDIT_INSPECT_ERROR_VALUE_BOOL": "Possible values for this property are <code>true</code> and <code>false</code>",
+  "SIDEBAR_EDIT_INSPECT_ERROR_VALUE_NUMERIC": "Values for this property have to be numeric. You have to define an interval of values that interest you.",
+  "SIDEBAR_EDIT_INSPECT_ERROR_VALUE_TEXT": "Enter any text you wish to find within this property. You will only find exact matches.",
+  "SIDEBAR_EDIT_INSPECT_PROPERTY_NODE": "Nodes' properties",
+  "SIDEBAR_EDIT_INSPECT_PROPERTY_EDGE": "Edges' properties",
   "SIDEBAR_EDIT_INSPECT_REMOVE_ITEM": "Remove element?",
-  "SIDEBAR_EDIT_NAV_TT_MAPPINGS": "Mappings overview",
-  "SIDEBAR_EDIT_NAV_TT_INSPECT": "Inspect network data",
+  "SIDEBAR_EDIT_INSPECT_RULE_LIST": "List of defined rules",
+  "SIDEBAR_EDIT_INSPECT_NEW_RULE": "Create a new rule",
+  "SIDEBAR_EDIT_NAV_TT_INFO": "Network information",
+  "SIDEBAR_EDIT_NAV_TT_MAPPINGS": "Visualization",
+  "SIDEBAR_EDIT_NAV_TT_EXPORT": "Export",
   "SIDEBAR_EDIT_NAV_TT_SETTINGS": "Highlighting settings",
   "SIDEBAR_EDIT_BTN_LABEL_DISPLAY_CONTINUOUS_DETAILS": "Visit details",
   "SIDEBAR_EDIT_VISUAL_AID_ERROR_HEADER": "No visual aid available",
@@ -150,6 +169,14 @@
   "SIDEBAR_EDIT_NEW_MAPPING_NODE_PLACEHOLDER": "Enter a node's attribute ...",
   "SIDEBAR_EDIT_NEW_MAPPING_PLACEHOLDER": "Enter a style property ...",
   "SIDEBAR_EDIT_LABEL_HISTOGRAM": "Histogram for ",
+  "SIDEBAR_EDIT_TT_EDIT_INFORMATION_TOGGLE": "Edit network attributes",
+  "SIDEBAR_EDIT_TT_EDIT_INFORMATION_DISCARD": "Discard changes to network attributes",
+  "SIDEBAR_EDIT_TT_EDIT_STATUS_TOGGLE": "Edit NDEx status",
+  "SIDEBAR_EDIT_TT_EDIT_STATUS_DISCARD": "Discard changes to NDEx status",
+  "SIDEBAR_EDIT_TT_EDIT_NODES_TOGGLE": "Edit node properties",
+  "SIDEBAR_EDIT_TT_EDIT_NODES_DISCARD": "Discard changes to node properties",
+  "SIDEBAR_EDIT_TT_EDIT_EDGES_TOGGLE": "Edit edge properties",
+  "SIDEBAR_EDIT_TT_EDIT_EDGES_DISCARD": "Discard changes to edge properties",
   "SIDEBAR_EDIT_TT_INSPECTION_MODE": "Inspection mode",
   "SIDEBAR_EDIT_TT_EDIT_MODE": "Edit mode",
   "SIDEBAR_EDIT_TT_DELETE_ALL": "Delete all",
@@ -163,12 +190,14 @@
   "SIDEBAR_EDIT_TT_DELETE_COL": "Deletes this mapping and clears out unused thresholds",
   "SIDEBAR_EDIT_TT_DELETE_CELL": "When deleting this cell its threshold stays",
   "SIDEBAR_EDIT_TT_NEW": "New mapping collection",
+  "SIDEBAR_EDIT_TT_EXISTING": "Existing mapping collections",
   "SIDEBAR_EDIT_TT_ADD_CELL": "Adds a cell to this threshold and column",
   "SIDEBAR_EDIT_TT_ADD_MAPPING": "Adds a mapping to this collection",
   "SIDEBAR_EDIT_TT_ADD_MAPPING_INPUT_SHOW": "Show input field",
   "SIDEBAR_EDIT_TT_ADD_MAPPING_INPUT_HIDE": "Hide input field",
   "SIDEBAR_EDIT_TT_ADD_THRESHOLD": "Adds a threshold to this collection, usable for all mappings",
   "SIDEBAR_EDIT_TT_BTN_ABORT": "Abort and return to inspection mode",
+  "SIDEBAR_EDIT_TT_BTN_ABORT_NEWLY_ADDED": "Abort creating this mapping collection",
   "SIDEBAR_EDIT_TT_BTN_MAGIC_ON": "Show me how this mapping would apply to the network",
   "SIDEBAR_EDIT_TT_BTN_MAGIC_OFF": "Return to editing this mapping",
   "SIDEBAR_EDIT_TT_BTN_APPLY": "Applying the defined mapping to the network. Be sure about this!",
@@ -177,13 +206,34 @@
   "SIDEBAR_EDIT_TT_MOVE_CELL": "Assign this value to another threshold",
   "SIDEBAR_EDIT_TT_MOVE_CELL_HERE": "Apply here",
   "SIDEBAR_EDIT_TT_HAS_DUPLICATES": "This thresholds has duplicates! This should be avoided, since it can result in problems.",
+  "SIDEBAR_EDIT_TT_NETWORK_ON_NDEX": "View network on NDEx",
+  "SIDEBAR_EDIT_HEADLINE_ATTRIBUTES": "Attributes",
+  "SIDEBAR_EDIT_HEADLINE_STATUS": "NDEx Status",
+  "SIDEBAR_EDIT_NETWORK": "Network",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_DELETE_LINE": "Remove this entry",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_ADD_LINE": "New entry",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_SUBMIT": "Submit changes",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_DISCARD": "Discard changes",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_ERROR_REQUIRED": "This field is required",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_TYPE": "Data type",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_VALUE": "Value",
+  "SIDEBAR_EDIT_NETWORK_ATTRIBUTES_REMOVE_ALL": "Remove all entries",
   "SIDEBAR_EDIT_ALERT_REMOVE_EDGE_MAPPINGS_HEADLINE": "There are edge mappings marked to be deleted!",
   "SIDEBAR_EDIT_ALERT_REMOVE_NODE_MAPPINGS_HEADLINE": "There are node mappings marked to be deleted!",
   "SIDEBAR_EDIT_ALERT_REMOVE_EDGE_MAPPINGS": "All mappings associated to the edge properties below are deleted if you continue. You can still check out the marked mappings in inspection mode, if you're unsure about this. Deleting the collection can only be undone by reimporting the network.",
   "SIDEBAR_EDIT_ALERT_REMOVE_NODE_MAPPINGS": "All mappings associated to the node properties below are deleted if you continue. You can still check out the marked mappings in inspection mode, if you're unsure about this. Deleting the collection can only be undone by reimporting the network.",
-  "SIDEBAR_EDIT_ALERT_REMOVE_EP": "Passthrough:",
-  "SIDEBAR_EDIT_ALERT_REMOVE_ED": "Discrete:",
-  "SIDEBAR_EDIT_ALERT_REMOVE_EC": "Continuous:",
+  "SIDEBAR_EDIT_ALERT_REMOVE_P": "Passthrough:",
+  "SIDEBAR_EDIT_ALERT_REMOVE_D": "Discrete:",
+  "SIDEBAR_EDIT_ALERT_REMOVE_C": "Continuous:",
+  "SIDEBAR_EDIT_MAPPING_HARD_RESET_NODE": "Reset visual node properties to default",
+  "SIDEBAR_EDIT_MAPPING_HARD_RESET_EDGE": "Reset visual edge properties to default",
+  "SIDEBAR_EDIT_MAPPING_INIT_DEFAULT_NODE": "Initialize visual node properties (including labels)",
+  "SIDEBAR_EDIT_MAPPING_INIT_DEFAULT_EDGE": "Initialize visual edge properties",
+  "SIDEBAR_EDIT_MAPPING_HARD_RESET_HEADLINE": "Reset to default",
+  "SIDEBAR_EDIT_MAPPING_HARD_RESET_TEXT": "Resetting the visual properties back to default includes deletion of all existing mappings and defined properties. Be sure about this!",
+  "SIDEBAR_EDIT_MAPPING_HARD_RESET_TEXT_NODE": "We keep the passthrough mapping for node labels (if it exists). You can still remove it manually in the passthrough tab.",
+  "SIDEBAR_EDIT_TT_RESET_CONFIRM": "Reset!",
+  "SIDEBAR_EDIT_TT_RESET_ABORT": "Abort",
   "MODAL_FONT_FACE_FORM": "Define font face property",
   "MODAL_FONT_FACE_FORM_DESCRIPTION": "Adjust font face and size, even font style for specific fonts. The mapping is displayed below. To abort close this window without hitting submit.",
   "MAIN_MAPPINGS_TH_COL": "Data column",
@@ -263,7 +313,7 @@
   "SIDEBAR_COMPARE_ABOUT_3_1": "Please contact",
   "SIDEBAR_COMPARE_ABOUT_3_2": "for feature requests and inquiries",
   "SIDEBAR_COMPARE_TEASER": "Comparison tool coming soon!",
-  "SIDEBAR_IMAGE_TITLE": "Save as image",
+  "SIDEBAR_IMAGE_TITLE": "Export options",
   "SIDEBAR_IMAGE_FULL": "Save complete network",
   "SIDEBAR_IMAGE_FULL_HINT": "Otherwise only the current viewport is exported",
   "SIDEBAR_IMAGE_BG": "Change background color",
@@ -273,9 +323,9 @@
   "SIDEBAR_IMAGE_HEIGHT": "Height",
   "SIDEBAR_IMAGE_SCALE": "Scale image",
   "SIDEBAR_IMAGE_SCALE_HINT": "You can increase the image up to 10 times",
-  "SIDEBAR_IMAGE_SELECT_TYPE": "Select filetype",
-  "SIDEBAR_IMAGE_BTN_DOWNLOAD": "Download image",
-  "SIDEBAR_IMAGE_GENERAL": "You can select either PNG or JPEG as type of your image. Furthermore can define several non-mandatory settings.",
+  "SIDEBAR_IMAGE_SELECT_TYPE": "Download as",
+  "SIDEBAR_IMAGE_BTN_DOWNLOAD": "Download",
+  "SIDEBAR_IMAGE_GENERAL": "You can select either PNG, JPEG or CX as type of your download file. You can tweak several settings for your image download. If you plan to upload your network to NDEx you'll need the CX format.",
   "CHART_HISTO_INCREASE": "Add bin",
   "CHART_HISTO_DECREASE": "Remove bin",
   "CHART_HISTO_RESET": "Reset bins to "
